Make sure SiteHead navigation doesn't wrap

--- a/src/stylesheets/components/site-head.scss
+++ b/src/stylesheets/components/site-head.scss
@@ -89,6 +89,8 @@ $nav-styles: (
       margin-top: 0;
     }
 
+    white-space: nowrap;
+
     &List {
       margin: 0;
       padding: 0;
